#452 removed dependency on Java 8